cluster-resources/networkpolicies/resume-db-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: resume-db-default-deny
  namespace: resume-db
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
